add duoshuo comment

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
   <app></app>
   <!-- built files will be auto injected -->
     <script src="./static/jquery.min.js"></script>
+ 	<script>var duoshuoQuery = {short_name:"fishliu"};</script>
+	<script src="http://static.duoshuo.com/embed.js"></script>
 	<script src="./static/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 </body>
 
