--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
   <meta charset="utf-8">
-  <title>blog</title>
+  <title>FishLiu</title>
 <!--   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/default.min.css">
  -->	
  <link href="./static/bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
